tests/core/error/describe-2.rq
# Use variable without WHERE clause
DESCRIBE ?u
